# trnrand

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  ROADMAP.md  mkdocs.yml  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  publish.yml
benchmarks/: bench_rand.py  bench_streaming.py  conftest.py
docs/: architecture.md  aws_setup.md  benchmarks.md  developing_kernels.md  index.md  installation.md  quickstart.md  release.md  roadmap.md  stability.md
docs/api/: distributions.md  generator.md  nki.md  quasi.md
docs/design/: counter_partitioned_multichip.md  sbuf_resident_generator.md
examples/: bayesian_ab_test.py  gamma_waiting_times.py  mc_integration.py  poisson_process.py
infra/terraform/: README.md  main.tf
infra/terraform-trn2/: main.tf
scripts/: bench_to_md.py  run_benchmarks.sh  run_neuron_tests.sh  run_simulator_tests.sh
site/: 404.html  index.html  sitemap.xml
site/api/distributions/: index.html
site/api/generator/: index.html
site/api/nki/: index.html
site/api/quasi/: index.html
site/architecture/: index.html
site/aws_setup/: index.html
site/benchmarks/: index.html
site/installation/: index.html
site/quickstart/: index.html
site/release/: index.html
site/search/: search_index.json
tests/: conftest.py  test_distributions.py  test_nki_dispatch.py  test_nki_distributions.py  test_nki_partitioning.py  test_nki_philox.py  test_nki_quasi.py  test_nki_sim.py  test_nki_streaming.py  test_partitioning.py  test_program.py  test_quasi.py
trnrand/: __init__.py  distributions.py  generator.py  quasi.py
trnrand/nki/: __init__.py  dispatch.py  program.py
