[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trnrand"
version = "0.1.0"
description = "Random number generation for AWS Trainium via NKI"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Scott Friedman", email = "scttfrdmn@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "torch>=2.1",
    "numpy>=1.24",
]

[project.optional-dependencies]
neuron = [
    # neuronxcc is not on public PyPI; it ships with the Deep Learning AMI Neuron.
    # Pin >=2.24 to match sibling repos (trnfft) — the NKI calling convention
    # used by the trn-* suite requires the 2.24+ partition-dim tile layout.
    # See docs/installation.md for the validated AMI/SDK versions.
    "neuronxcc>=2.24",
    "torch-neuronx>=2.9",
]
dev = [
    "pytest>=7.0",
    "pytest-benchmark>=4.0",
    "scipy>=1.11",
    "mkdocs>=1.5",
    "mkdocs-material>=9.0",
]

[project.urls]
Homepage = "https://github.com/trnsci/trnrand"
Documentation = "https://trnsci.dev/trnrand/"
Repository = "https://github.com/trnsci/trnrand"
Issues = "https://github.com/trnsci/trnrand/issues"

[tool.setuptools.packages.find]
include = ["trnrand*"]

[tool.pytest.ini_options]
markers = [
    "neuron: requires Neuron hardware (trn1/trn2 instance)",
]
testpaths = ["tests"]
